[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes-Jordan/CornerBlocks.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes-Jordan/CornerSpikes.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes-Jordan/Pillar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes-Martin/Scripts-Martin/CornerPiece.gd" type="Script" id=4]
[ext_resource path="res://Scenes-Jordan/LightCorner_New.tscn" type="PackedScene" id=5]

[node name="CornerPiece" type="Spatial"]
script = ExtResource( 4 )

[node name="CornerBlocks" parent="." instance=ExtResource( 1 )]

[node name="CornerSpikes" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.16622, 0.594212, -2.19582 )

[node name="LightCorner_New" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -1.5 )

[node name="Pillar" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.02183, 3.57628e-07, -2.04518 )

[node name="Pillar2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.99704, 3.57628e-07, -2.00049 )

[node name="Pillar3" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.03445, 3.57628e-07, 3.00774 )
